website: RU - sync ru/docproj pages
Reviewed by: andy, marck
Differential Revision: https://reviews.freebsd.org/D54075

--- a/website/content/ru/docproj/_index.adoc
+++ b/website/content/ru/docproj/_index.adoc
@@ -16,6 +16,7 @@ sidenav: docs
 Проект The FreeBSD Documentation Project имеет цель заполнить этот пробел. Это осуществляется двумя способами:
 
 . Участники Проекта пишут документации и предоставляют ее для включения во _FreeBSD Documentation Set_.
+
 . Участники Проекта обсуждают и упорядочивают формат и организацию _FreeBSD Documentation Set_.
 
 [.tblbasic]
@@ -25,21 +26,16 @@ a|
 [.center]
 === link:current[Текущие проекты]
 
-В настоящий момент _на этапе реализации_ находятся несколько проектов, являющихся частью Проекта Документирования. Пожалуйста, выберите время, чтобы взглянуть на этот список и определиться, есть ли в нем что-либо, в чем *вы* можете помочь.
-
+В настоящий момент _на этапе реализации_ находятся несколько проектов, являющихся частью Проекта Документирования. Пожалуйста, выберите время, чтобы взглянуть https://wiki.freebsd.org/Doc/IdeaList[на этот список] и определиться, есть ли в нем что-либо, в чем *вы* можете помочь.
 |===
 
 == link:who[Кто мы и как к нам присоединиться]
 
 Эта страница описывает, кто осуществляет Проект Документирования, и как вы можете к нему присоединиться.
 
-== link:doc-set[The FreeBSD Documentation Set]
+== link:doc-set[Проект Документирования FreeBSD: Пакет Документации]
 
 Эта страница описывает компоненты Комплекта Документации FreeBSD, и то, какую работу с ним проделывает Проект Документирования.
-
-== link:sgml[SGML и Documentation Project]
-
-Для документации проект пытается использовать SGML. Эта страница описывает, как это достигается, и отправляет заинтересовавшегося читателя к более подробным ресурсам SGML.
 
 == link:submitting[Посылка документации]
 
@@ -48,3 +44,9 @@ a|
 == link:translations[Перевод]
 
 Переводы документации FreeBSD, страниц веб, Руководства, страниц Справочника и FAQ.
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (02.12.2021): fbb8fe55531a972dfaa321fbf126d45b3909260c
+//
