--- a/website/content/ru/docproj/submitting.adoc
+++ b/website/content/ru/docproj/submitting.adoc
@@ -11,45 +11,21 @@ include::shared/ru/urls.adoc[]
 
 Во-первых, спасибо, что вы нашли время и сделали это.
 
-Вы должны сделать вашу документацию доступной для предварительного просмотра. Если это возможно, поместите её на FTP или веб-сервер.
+Вы должны сделать вашу документацию доступной для предварительного просмотра. Если это возможно, поместите её на какой-либо веб-сервер.
 
-После этого пошлите сообщение в список рассылки -doc с кратким описанием документации и ссылкой на её местоположение, а также просьбой поделиться отзывами.
+После этого пошлите сообщение в список рассылки `FreeBSD-doc` с кратким описанием документации и ссылкой на её местоположение, а также просьбой поделиться отзывами.
 
-Если по каким-то причинам вы не можете поместить документацию на какой-либо FTP или веб-сервер, то пошлите её непосредственно в список рассылки -doc. Если вы собираетесь поступить именно так, то присылайте документы в формате обычного текста.
+Если по каким-то причинам вы не можете поместить документацию на какой-либо веб-сервер, то пошлите её непосредственно в список рассылки `FreeBSD-doc`. Если вы собираетесь поступить именно так, то присылайте документы в формате обычного текста.
 
-Скорее всего, вы ещё понадобится сделать cc: этого запроса на комментарии в другие подходящие списки рассылки. Например, что-либо, относящееся к использованию CVSup для синхронизации дерева исходных текстов, будет интересно подписчикам списков рассылки `FreeBSD-current` и `FreeBSD-stable`.
+Скорее всего, вы ещё понадобится сделать cc: этого запроса на комментарии в другие подходящие списки рассылки. Например, что-либо, относящееся к использованию Git для синхронизации дерева исходных текстов, будет интересно подписчикам списков рассылки `FreeBSD-stable`. Пожалуйста, делайте копии максимум в один список рассылки.
 
 После того, как люди посмотрели на вашу документацию, и вы получили шанс включить в документ любые из их пожеланий, вы уже можете посылать эту документацию.
 
-Чтобы сделать это, заархивируйте её в один tar-файл. Если ваша документация состоит из трех файлов, `one`, `two` и `three`, а вы хотите получить их в виде `doc.tar`, сделайте следующее:
+Правильный способ сделать это — открыть отчет о проблеме (Problem Report). Инструкции по этому можно найти по ссылке link:../../support/bugreports/[Отчёты об ошибках].
 
-....
-% tar cf doc.tar one two three
-....
+Вы делаете это для того, чтобы ваше послание могло быть отслежено. Когда вы оформляете PR (Problem Report - сообщение о проблеме), ему назначается уникальный номер. Один из коммиттеров может затем направить PR себе, и установить с вами связь по поводу включения новой документации в систему. Для получения дополнительной информации см. link:{problem-reports}[Написание отчётов о проблемах в FreeBSD].
 
-Затем выполните сжатие tar-файла:
-
-....
-% gzip -9 doc.tar
-....
-
-в результате чего появится `doc.tar.gz`.
-
-И, наконец, перекодируйте файл в вид, который подходит для передачи через любую программу электронной почты.
-
-....
-% uuencode doc.tar.gz doc.tar.gz > doc.uue
-....
-
-Теперь дайте знать о нём группе Проекта Документирования. Правильным способом сделать это является использование программы *send-pr*, которая должна иметься на вашей машине.
-
-Вы делаете это для того, чтобы ваше послание могло быть отслежено. Когда вы оформляете PR (Problem Report - сообщение о проблеме), ему назначается уникальный номер. Один из коммиттеров может затем направить PR себе, и установить с вами связь по поводу включения новой документации в систему.
-
-*send-pr* сама по себе очень проста. Все, что она делает - это посылка электронной почты, оформленной особым образом, на определенный адрес. Когда вы запускаете *send-pr*, вы оказываетесь в текстовом редакторе (вероятнее всего, *vi* или *emacs*) с бланком для заполнения и некоторыми инструкциями по заполнению.
-
-Удостоверьтесь, что пункт "Category" установлен в "docs", а в строчке "Class" фигурирует только лишь "change-request". Вы должны включить в это PR ранее созданный файл `.uue`.
-
-Когда вы завершите работу с редактором, PR будет послано по электронной почте туда, куда нужно. Вскоре вы получите подтверждающее сообщение, вкратце говорящее, какой номер был назначен PR, и этот номер может быть использован для отслеживания его судьбы.
+Убедитесь, что для "Product" установлено значение "Documentation", а для "Component" установлено либо "Documentation", либо "Website" в зависимости от ситуации. Вы должны прикрепить ваши файлы из предыдущего шага к PR. Пожалуйста, также предоставьте ссылки на сообщения в списках рассылки, где обсуждались ваши изменения, если это уместно.
 
 == Я сделал некоторые изменения и исправления в существующей документации, как вам их послать?
 
@@ -80,6 +56,15 @@ include::shared/ru/urls.adoc[]
 +
 Здесь выполняется просмотр отличий между двумя файлами и запись этих отличий в файл `foo.diff`.
 
-После этого вы можете послать `foo.diff` обратно в адрес проекта. Пошлите PR так, как это было описано выше, включив в тело письма файл `foo.diff`.
+После этого вы можете послать `foo.diff` обратно в адрес проекта. Пошлите PR так, как это было описано выше, включив файл `foo.diff` в PR.
 
-link:..[Проект Документирования FreeBSD]
+== Дополнительная информация
+
+* link:{fdp-primer}[Проект документации FreeBSD: введение для новых участников]
+* link:..[Проект Документирования FreeBSD]
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (19.06.2021): 8e22e76d94dc5fef83abcb3c082ab4242ef90ba2
+//
