--- a/website/content/ru/docproj/translations.adoc
+++ b/website/content/ru/docproj/translations.adoc
@@ -13,265 +13,259 @@ sidenav: docs
 * <<estonian,Эстонский Проект Документирования>>
 * <<french,Французский Проект Документирования>>
 * <<german,Немецкий Проект Документирования>>
+* <<greek,Греческий Проект Документирования>>
+* <<hungarian,Венгерский Проект Документирования>>
 * <<italian,Итальянский Проект Документирования>>
 * <<japanese,Японский Проект Документирования>>
 * <<korean,Корейский Проект Документирования>>
+* <<mongolian,Монгольский Проект Документирования>>
 * <<polish,Польский Проект Документирования>>
-* <<romanian,Румынский Проект Документирования>>
 * <<russian,Русский Проект Документирования>>
 * <<spanish,Испанский Проект Документирования>>
-* <<turkish,Турецкий Проект создания документации>>
+* <<farsi,Farsi/Персидский Проект Документирования>>
 
 [[brazilian_portuguese]]
 == Бразильско-португальский Проект Документирования FreeBSD
 
-*Web*: http://doc.fugspbr.org/ +
-*E-Mail*: lioux@FreeBSD.org +
+*Web*: https://wiki.freebsd.org/Doc/Translation/BrazilianPortuguese +
+*E-Mail*: ebrandi@FreeBSD.org or dbaio@FreeBSD.org
 
-_Имеющиеся списки рассылки_::
-Перейдите по следующей ссылке http://lists.fugspbr.org/listinfo.cgi/doc-fugspbr.org/ за инструкциями по подписке на список рассылки бразильско-португальской группы перевода. +
-Или отправьте письмо на mailto:doc-request@fugspbr.org?subject=subscribe[doc-request@fugspbr.org] со словом "subscribe" в теме письма. +
-Создавать новые сообщения могут участники списка рассылки doc@fugspbr.org
-_Имеющиеся документы_::
-link:https://www.FreeBSD.org/doc/pt_BR/books/faq/[FAQ]
-+
-link:https://www.FreeBSD.org/doc/pt_BR/articles/contributing/[Как помочь FreeBSD]
+Documents available:
+
+* link:https://docs.freebsd.org/pt-br/articles/[FreeBSD Articles]
+* link:https://docs.freebsd.org/pt-br/books/[FreeBSD Books]
+
 _Документы, находящиеся в работе_::
-http://doc.fugspbr.org/fdp/[Пример проекта документирования FreeBSD для новых участников]
-+
-http://doc.fugspbr.org/handbook/[Руководство FreeBSD]
+
+* FreeBSD Architecture Handbook
+* FreeBSD Developers Handbook
+* The Design and Implementation of the 4.4BSD Operating System
 
 [[bulgarian]]
-== Болгарский Проект Документирования FreeBSD
+== Проект документации FreeBSD на болгарском языке
 
-*Web-сайт*: http://fdp.bg-freebsd.org/ +
-*Электронная почта*: freebsd-fdp@bg-freebsd.org +
+*Веб-сайт*: http://bg-freebsd.org/ +
+*Электронная почта*: freebsd-fdp@bg-freebsd.org
 
-_Имеющиеся списки рассылки_::
-Перейдите по ссылке http://lists.bg-freebsd.org/, чтобы получить инструкции по подписке на список рассылки болгарской группы перевода. +
-Либо отправьте письмо на адрес freebsd-fdp-subscribe@bg-freebsd.org. +
-Создавать новые сообщения могут участники списка рассылки freebsd-fdp@bg-freebsd.org
-_Имеющиеся документы_::
-http://www.cybershade.us/freebsd/bg/fdp/split/[Учебник по Проекту документирования FreeBSD для новых участников]
-_Документы, находящиеся в работе_::
-Руководство FreeBSD
-+
-Web-сайт FreeBSD
-+
-Архитектура и реализация 4.4BSD (ознакомительная глава)
-+
-Часто задаваемые вопросы по FreeBSD
+Доступен список рассылки:
 
-[[chinese-tw]]
-== Проект Документирования на традиционном китайском
+* Отправьте электронное письмо на freebsd-fdp-subscribe@bg-freebsd.org.
+* Публикация разрешена для участников на freebsd-fdp@bg-freebsd.org
 
-*Web*: - +
-*E-Mail*: foxfair@FreeBSD.org +
+Доступные документы:
 
-_Имеющиеся списки рассылки_::
-Пошлите письмо со строчкой "subscribe freebsd-chinese-doc" на адрес majordomo@freebsd.sinica.edu.tw. +
-Посылка сообщений разрешена участникам по адресу freebsd-chinese-doc@freebsd.sinica.edu.tw
-_Имеющиеся документы_::
-link:https://www.FreeBSD.org/doc/zh-tw/books/faq/[FAQ]
-_Документы, находящиеся в работе_::
-http://www.tw.FreeBSD.org/handbook-big5.html[Руководство]
+Документы, над которыми в настоящее время ведется работа:
+
+* Руководство FreeBSD (Handbook)
+* Веб-сайт FreeBSD
+* Дизайн и реализация 4.4BSD (образец главы)
+* Часто задаваемые вопросы по FreeBSD (FAQ)
 
 [[chinese-cn]]
-== Проект создания документации на упрощённом китайском
+== Проект документации FreeBSD на упрощенном китайском языке
 
-*Web-сайт*: http://www.FreeBSD.org.cn[www.FreeBSD.org.cn] +
-*Электронная почта*: delphij@FreeBSD.org +
+*Электронная почта*: delphij@FreeBSD.org или ygy@FreeBSD.org
 
-_Имеющиеся списки рассылки_::
-Инструкции по подключению к списку рассылки Проекта создания документации на упрощённом китайском доступны по ссылке http://lists.cn.FreeBSD.org/mailman/listinfo
-_Последние результаты нашей работы_::
-http://cnsnap.cn.FreeBSD.org/zh_CN/[Web-сайт]
-+
-http://cnsnap.cn.FreeBSD.org/doc/zh_CN/books/arch-handbook[Руководство по архитектуре]
-+
-http://cnsnap.cn.FreeBSD.org/doc/zh_CN/books/developers-handbook[Руководство для разработчиков]
-+
-http://cnsnap.cn.FreeBSD.org/doc/zh_CN/books/handbook[Руководство]
-+
-http://cnsnap.cn.FreeBSD.org/doc/zh_CN/books/porters-handbook[Руководство по созданию портов]
-+
-http://cnsnap.cn.FreeBSD.org/doc/zh_CN/books/faq[FAQ]
+Документы, над которыми в настоящее время ведется работа:
+
+* link:https://www.freebsd.org/zh-cn/[Веб-сайт FreeBSD]
+* link:https://docs.freebsd.org/zh-cn/books/handbook/[Руководство FreeBSD]
+
+[[chinese-tw]]
+== Проект документации FreeBSD на традиционном китайском языке
+
+*Веб-сайт*: https://www.freebsd.org/zh-tw/ +
+*Электронная почта*: chinsan@FreeBSD.org
+
+Доступна группа новостей USENET:
+
+* Мы обычно используем tw.bbs.comp.386bsd для обсуждения этих вопросов.
+* К ней можно получить доступ по следующим URL:
+* link:http://www.ptt.cc/bbs/FreeBSD/index.html[PTT WebBBS]
+* link:http://groups.google.com.tw/group/tw.bbs.comp.386bsd?lnk%27sg%27[Google Group]
+* и через любой другой новостной клиент, который может читать tw.bbs.comp.386bsd.
+
+Доступные документы:
+
+* link:https://docs.freebsd.org/zh-tw/books/faq/[Часто задаваемые вопросы (FAQ)]
+
+Документы, над которыми в настоящее время ведется работа:
+
+* Веб-сайт FreeBSD
+* link:https://docs.freebsd.org/zh-tw/books/handbook/[Руководство FreeBSD]
+* link:https://docs.freebsd.org/zh-tw/books/developers-handbook/[Руководство разработчика (Developers' Handbook)]
+* link:https://docs.freebsd.org/zh-tw/books/porters-handbook/[Руководство портера (Porters' Handbook)]
+* link:https://docs.freebsd.org/zh-tw/books/fdp-primer/[Введение в проект документации FreeBSD для новых участников]
 
 [[dutch]]
-== Датский проект создания документации FreeBSD
+== Проект документации FreeBSD на нидерландском языке
 
-*Электронная почта*: remko@FreeBSD.org +
+*Электронная почта*: remko@FreeBSD.org или rene@FreeBSD.org
 
-_Имеющиеся списки рассылки_::
-Для подключения к датскому списку рассылки FreeBSD-doc-nl, в котором ведутся обсуждения, отправьте сообщение по электронной почте на адрес majordomo@majordomo.elvandar.org с текстом "subscribe freebsd-doc-nl" в теле письма. +
-+
-Для подключения к списку рассылки CVS FreeBSD-doc-nl-cvs, отправьте сообщение по электронной почте на адрес majordomo@majordomo.elvandar.org с текстом "subscribe freebsd-doc-nl-cvs" в теле письма. +
-_Опубликованные документы_::
-http://www.freebsd.org/doc/nl/books/handbook[Руководство (готово 80%)]
-_Работа ещё ведётся_::
-http://www.freebsd-nl.org/doc/nl[Руководство]
-+
-http://www.freebsd-nl.org/www/nl[Web-страница]
+Выпущенные документы:
+
+* link:https://docs.freebsd.org/nl/books/handbook/[Руководство FreeBSD]
+* link:https://docs.freebsd.org/nl/articles/[Несколько статей]
+* link:https://www.freebsd.org/nl/[Веб-страница]
 
 [[estonian]]
-== Эстонский Проект Документирования FreeBSD
+== Проект документации FreeBSD на эстонском языке
 
-*Web*: http://www.bsd.ee/tolge.php +
-
-_Имеющиеся документы_::
-http://www.bsd.ee/handbook/[Руководство FreeBSD]
+*Веб-сайт*: http://www.bsd.ee/
 
 [[french]]
-== Французский Проект Документирования FreeBSD
+== Проект документации FreeBSD на французском языке
 
-*Web*: http://www.freebsd-fr.org/[http://www.freebsd-fr.org] +
+*Электронная почта*: blackend@FreeBSD.org или gioria@FreeBSD.org
 
-_Имеющиеся списки рассылки_::
-Пошлите письмо со строчкой "SUB freebsd-questions" на адрес listserver@freebsd-fr.org, чтобы подписаться на франкоязычный список рассылки, посвящённый вопросам пользователей. +
-+
-Пошлите письмо со строчкой "SUB annonces" на адрес listserver@freebsd-fr.org, чтобы подписаться на франкоязычный список рассылки с анонсами. +
-_Имеющиеся документы_::
-link:https://www.FreeBSD.org/doc/fr/books/faq[FAQ]
-+
-link:https://www.FreeBSD.org/doc/fr/articles/[Некоторые статьи и пособия]
-+
-http://www.freebsd-fr.org/local-fr/www/spec/bulletins_index.html[Really Quick Newsletters]
-+
-http://www.freebsd-fr.org/doc/fr/books/picobsd/[PicoBSD]
-_Документы, находящиеся в работе_::
-link:https://www.FreeBSD.org/doc/fr/books/handbook/book[Руководство], link:https://www.FreeBSD.org/fr/[Web]
-_Дерево CVS_::
-http://www.freebsd-fr.org/cgi-fr/cvsweb.cgi/[CVS web]
-+
-Пошлите письмо со строчкой "SUB cvs" на адрес listserver@freebsd-fr.org для того, чтобы подписаться на список рассылки French CVS update. +
+Доступные документы:
+
+* link:https://docs.freebsd.org/fr/books/faq/[Часто задаваемые вопросы (FAQ)]
+* link:https://docs.freebsd.org/fr/articles/[Некоторые статьи и руководства]
+
+Документы, над которыми в настоящее время ведется работа:
+
+* link:https://docs.freebsd.org/fr/books/handbook/[Руководство FreeBSD], link:https://www.freebsd.org/fr/[Веб-сайт]
 
 [[german]]
-== Немецкий Проект Документирования FreeBSD
+== Проект документации FreeBSD на немецком языке
 
-*Web-сайт*: http://people.FreeBSD.org/~mheinen/de-bsd-translators/de-bsd-translators.html +
+*Веб-сайт*: link:https://people.freebsd.org/~jkois/FreeBSDde/de/[Страница статуса немецкого проекта] +
 *Электронная почта*: de-bsd-translators@de.FreeBSD.org +
+*IRC*: Сервер: irc.freenode.net, Канал: #FreeBSD-Doc.de
 
-_Имеющиеся документы_::
-link:https://www.FreeBSD.org/doc/de/books/faq/[FAQ], link:https://www.FreeBSD.org/doc/de/articles/[несколько статей]
-_Документы, находящиеся в работе_::
-link:https://www.FreeBSD.org/doc/de/books/handbook/[Руководство], link:https://www.FreeBSD.org/doc/de/books/fdp-primer/[Учебник FDP], link:https://www.FreeBSD.org/de/[Web-сайт]
+Доступные документы / документы в работе: +
+link:https://www.freebsd.org/de/[Веб-сайт], link:https://docs.freebsd.org/de/books/developers-handbook/[Руководство разработчика (developers-handbook)], link:https://docs.freebsd.org/de/books/faq/[Часто задаваемые вопросы (FAQ)], link:https://docs.freebsd.org/de/books/fdp-primer/[Введение в FDP (FDP Primer)], link:https://docs.freebsd.org/de/books/handbook/[Руководство FreeBSD], link:https://docs.freebsd.org/de/books/porters-handbook/[Руководство портера (porters-handbook)], link:https://docs.freebsd.org/de/articles/[некоторые статьи].
+
+[[greek]]
+== Проект документации FreeBSD на греческом языке
+
+*Электронная почта*: Giorgos Keramidas <keramida@FreeBSD.org> +
+*Электронная почта*: freebsd-doc-el@lists.hellug.gr +
+*IRC*: Сервер: eu.irc.gr, us.irc.gr, Канал: #bsddocs
+
+Доступные списки рассылки:
+
+* freebsd-doc-el — основной список обсуждения для греческих переводов. Основной язык списка — греческий, но также можно писать на английском.
+* Информация о списке: http://lists.hellug.gr/mailman/listinfo/freebsd-doc-el
+
+Доступные документы:
+
+* link:https://docs.freebsd.org/el/articles/[некоторые статьи и руководства].
+
+Документы, над которыми в настоящее время ведется работа:
+
+* link:https://docs.freebsd.org/el/books/handbook/[Руководство FreeBSD], link:https://docs.freebsd.org/el/books/faq/[Часто задаваемые вопросы (FAQ)]
+
+Репозитории текущей работы (Mercurial): +
+
+link:http://hg.hellug.gr/freebsd/doc/[Импорты дерева документации FreeBSD], link:http://hg.hellug.gr/freebsd/doc-el/[Основное дерево перевода (doc)], link:http://hg.hellug.gr/freebsd/doc-sonicy/[Дерево перевода Manolis Kiagias (doc)], link:http://hg.hellug.gr/freebsd/www/[Импорты дерева веб-сайта FreeBSD], link:http://hg.hellug.gr/freebsd/www-el/[Основное дерево перевода веб-сайта (www)], link:http://hg.hellug.gr/freebsd/www-sonicy/[Дерево перевода Manolis Kiagias (www)].
+
+[[hungarian]]
+== Проект документации FreeBSD на венгерском языке
+
+*Веб-сайт*: https://www.freebsd.org/hu/docproj/hungarian/ +
+*Электронная почта*: gabor@FreeBSD.org
+
+Доступные документы: +
+link:https://www.freebsd.org/hu/[Веб-сайт], link:https://docs.freebsd.org/hu/articles/[некоторые статьи], link:https://docs.freebsd.org/hu/books/handbook/[Руководство FreeBSD], link:https://docs.freebsd.org/hu/books/faq/[Часто задаваемые вопросы (FAQ)], link:https://docs.freebsd.org/hu/books/fdp-primer/[Введение в FDP (FDP Primer)].
 
 [[italian]]
-== Итальянский Проект Документирования FreeBSD
+== Проект документации FreeBSD на итальянском языке
 
-*Web-сайт*: http://www.gufi.org/~alex/ +
-*Электронная почта*: ale@freebsd.org +
+*Веб-сайт*: https://people.freebsd.org/~madpilot/ItalianTranslation/ +
+*Электронная почта*: madpilot@freebsd.org
 
-_Имеющиеся списки рассылки_::
-Для получения инструкций по подключению к списку рассылки группы переводчиков на итальянский язык, обратитесь по ссылке http://liste.gufi.org/mailman/listinfo/traduzioni. +
-Либо отправьте электронное письмо на адрес mailto:traduzioni-request@gufi.org?subject=subscribe[traduzioni-request@gufi.org], указав "subscribe" в теме сообщения. +
-Публикация сообщений разрешена участникам по адресу traduzioni@gufi.org
-_Имеющиеся документы_::
-link:https://www.FreeBSD.org/doc/it/books/unix-introduction/[Введение в Unix]
-+
-link:https://www.FreeBSD.org/it/docs/#articles[Несколько статей]
-_Документы, над которыми сейчас ведётся работа_::
-link:https://www.FreeBSD.org/doc/it/books/handbook/[Руководство]
-+
-link:https://www.FreeBSD.org/it/[Web-сайт]
-_CVS-хранилище_::
-http://cvs.gufi.org/cgi/cvsweb.cgi/doc/[Web-интерфейс к CVS]
-+
-Для подключения к итальянскому списку рассылки с обновлениями в итальянском CVS-хранилище отправьте сообщение на адрес электронной почты mailto:cvs-all-request@gufi.org?subject=subscribe[cvs-all-request@gufi.org] со словом "subscribe" в теме письма. +
+Доступные документы:
+
+* link:https://docs.freebsd.org/it/books/handbook/[Руководство FreeBSD]
+
+Документы, над которыми в настоящее время ведется работа:
+
+* link:https://docs.freebsd.org/it/books/handbook/[Руководство FreeBSD]
+
+Репозиторий Git:
+
+* link:https://github.com/madpilot78/FreeBSD-doc-it[GitHub]
 
 [[japanese]]
-== Японский Проект Документирования FreeBSD
+== Проект документации FreeBSD на японском языке
 
-*Web*: http://www.jp.FreeBSD.org/doc-jp/ +
-*E-Mail*: doc-jp@jp.FreeBSD.org +
+*Веб-сайт*: http://www.jp.FreeBSD.org/doc-jp/ +
+*Электронная почта*: doc-jp@jp.FreeBSD.org
 
-_Имеющиеся документы_::
-link:https://www.FreeBSD.org/doc/ru/books/handbook/[Руководство], link:https://www.FreeBSD.org/doc/ja/books/faq/[FAQ], link:https://www.FreeBSD.org/ja/[Web], http://www.jp.FreeBSD.org/NewsLetter/Issue2/[FreeBSD NewsLetter Issue #2]
-_Документы, находящиеся в работе_::
-FreeBSD Tutorials
+Доступные документы:
+
+* link:https://docs.freebsd.org/ja/books/handbook/[Руководство FreeBSD], link:https://docs.freebsd.org/ja/books/faq/[Часто задаваемые вопросы (FAQ)], link:https://www.freebsd.org/ja/[Веб-сайт], link:http://www.jp.freebsd.org/NewsLetter/Issue2/[FreeBSD NewsLetter Issue #2]
+
+Документы, над которыми в настоящее время ведется работа:
+
+* Руководства FreeBSD (Tutorials)
 
 [[korean]]
-== Корейский Проект Документирования FreeBSD
+== Проект документации FreeBSD на корейском языке
 
-*Web*: http://www.kr.FreeBSD.org/projects/doc-kr/ +
-*E-Mail*: doc@kr.FreeBSD.org +
+*Веб-сайт*: https://wiki.kr.freebsd.org +
+*Электронная почта*: doc@kr.FreeBSD.org
 
-_Документы, находящиеся в работе_::
-Руководство
+Документы, над которыми в настоящее время ведется работа: +
+Руководство FreeBSD
+
+[[mongolian]]
+== Проект документации FreeBSD на монгольском языке
+
+*Электронная почта*: ganbold@micom.mng.net, natsag2000@yahoo.com, admin@mnbsd.org
 
 [[polish]]
+== Проект документации FreeBSD на польском языке
 
-== Польский Проект Документирования FreeBSD
+*Электронная почта*: bsd@therek.net
 
-*Web*: http://tlumaczenie.freebsd.pl +
-*E-Mail*: ni@merkury.pol.lublin.pl +
+Доступные документы: +
+Некоторые руководства
 
-_Имеющиеся документы_::
-Некоторые учебники
-_Документы, находящиеся в работе_::
-Учебники FreeBSD
-+
-Руководство
-+
-FDP-Primer
-
-[[romanian]]
-== Румынский Проект Документирования FreeBSD
-
-*Web*: http://www.rofug.ro/projects/ro-l10n/ +
-*E-Mail*: ady@rofug.ro +
-
-_Имеющиеся списки рассылки_::
-Для подписки на список рассылки ro-l10n обратитесь к Web-сайту проекта или отправьте письмо на listar@rofug.ro с телом "subscribe ro-l10n". +
-Создавать новые сообщения могут только участники списка рассылки ro-l10n.
-_Документы, находящиеся в работе_::
-Руководство
+Документы, над которыми в настоящее время ведется работа: +
+Руководство FreeBSD
 
 [[russian]]
 == Русский Проект Документирования FreeBSD
 
-*Web*: http://www.FreeBSD.org.ua/[http://www.FreeBSD.org.ua] +
-*E-Mail*: frdp@FreeBSD.org.ua +
+*Веб-сайт*: https://github.com/freebsd-doc-ru/freebsd-doc/[https://github.com/freebsd-doc-ru/freebsd-doc] +
+*Электронная почта*:  andy@FreeBSD.org или vladlen@FreeBSD.org +
 
 _Имеющиеся документы_::
-link:https://www.FreeBSD.org/doc/ru/books/faq/[FAQ]
+link:https://www.FreeBSD.org/doc/ru/books/[Все книги на сайте docs.freebsd.org]
 +
-link:https://www.FreeBSD.org/ru/[WWW]
+link:https://www.FreeBSD.org/doc/ru/articles/[Все статьи на сайте docs.freebsd.org]
 +
-http://www.FreeBSD.org.ua/docs.html[Другие документы]
+link:https://www.FreeBSD.org/ru[Все страницы на сайте www.FreeBSD.org]
 +
-http://surw.chel.su/~andy/ncvs/doc/ru/QA/QA.html[QA]
+link:https://www.FreeBSD.org/ru/releases/15.0R[Все страницы с информацией о релизе 15.0]
 _Документы, находящиеся в работе_::
-http://www.FreeBSD.org.ua/doc/ru/books/handbook/[Руководство]
+https://man.freebsd.org/cgi/man.cgi[Страницы Справочника]
 
 [[spanish]]
-== Испанский Проект Документирования FreeBSD
+== Проект документации FreeBSD на испанском языке
 
-*Web-сайт*: http://www.es.FreeBSD.org/es/ +
-*Электронная почта*: jesusr@FreeBSD.org +
+*Веб-сайт*: https://www.FreeBSD.org/es/ +
+*Электронная почта*: carlavilla@FreeBSD.org
 
-_Имеющиеся списки рассылки_::
-https://listas.es.freebsd.org/mailman/listinfo/doc[Документация на испанском языке]
-_Имеющиеся документы_::
-link:https://www.FreeBSD.org/doc/es/books/faq/[FAQ]
-+
-link:https://www.FreeBSD.org/doc/es/books/handbook/[Руководство]
-+
-link:https://www.FreeBSD.org/doc/es/articles/[Статьи]
+Доступные документы:
 
-[[turkish]]
-== Турецкий проект создания документации для FreeBSD
+* link:https://docs.freebsd.org/es/books/faq/[Часто задаваемые вопросы (FAQ)]
+* link:https://docs.freebsd.org/es/books/handbook/[Руководство FreeBSD]
+* link:https://docs.freebsd.org/es/articles/[Статьи]
 
-*Web-сайт*: http://www.enderunix.org/ftdp/ +
-*Электронная почта*: ofsen@enderunix.org +
+[[farsi]]
+== Проект документации FreeBSD на фарси/персидском языке
 
-_Имеющиеся списки рассылки_::
-Для подключения к списку рассылки ftdp обратитесь к Web-странице проекта либо отошлите пустое сообщение электронной почты на адрес link:ftdp-subscribe@lists.enderunix.org[ftpd-subscribe@lists.enderunix.org].
-_Имеющиеся документы_::
-link:https://www.FreeBSD.org/tr/[WWW]
-+
-http://www.enderunix.org/ftdp/[Список остальных документов]
-_Документы, над которыми в настоящее время ведётся работа_::
-Учебник FDP
+*Веб-сайт*: link:https://www.irbug.org/[Iran BSD User Group] +
+*Электронная почта*: kfv@irbug.org
 
 link:..[Главная страница Проекта Документирования FreeBSD]
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (11.08.2025): f0cec26f1d98820c90c889124bd3de51008701ad
+//
