--- a/website/content/ru/docproj/who.adoc
+++ b/website/content/ru/docproj/who.adoc
@@ -9,10 +9,16 @@ include::shared/ru/urls.adoc[]
 
 Проект представляет собой слабо связанную группу людей; единственное, что у нас имеется общего - это подписка на список рассылки FreeBSD-doc@FreeBSD.org.
 
-Некоторые из нас могут вносить изменения непосредственно в дерево документации FreeBSD. Вы можете увидеть полный список link:{contributors}#staff-committers[разработчиков FreeBSD с коммит привилегиями], как и список link:{contributors}#staff-doc[главных коммиттеров проекта документирования FreeBSD].
+Некоторые из нас могут вносить изменения непосредственно в дерево документации FreeBSD. Вы можете увидеть полный список link:{contributors}#staff-committers[разработчиков FreeBSD с коммит привилегиями], как и список link:../../administration/#t-doceng[главных коммиттеров проекта документирования FreeBSD].
 
 Другие не имеют таких прав, но они пишут и присылают нам документацию независимо от этого. Как только она будет отправлена в соответствии со страницей link:../submitting[посылка документации], один из коммиттеров просмотрит ее и включит в наш пакет документации.
 
 Если вы хотите помочь проекту документирования (и я страстно надеюсь на это), все, что вам нужно сделать - это подписаться на список рассылки и поучаствовать в обсуждениях. Как только вы это сделаете, можете считать себя участником проекта.
 
 link:..[FreeBSD Documentation Project Home]
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (19.06.2021): 8e22e76d94dc5fef83abcb3c082ab4242ef90ba2
+//
