--- a/website/content/ru/docproj/doc-set.adoc
+++ b/website/content/ru/docproj/doc-set.adoc
@@ -7,16 +7,23 @@ sidenav: docs
 
 Документация по FreeBSD разбивается на три основных категории:
 
-. http://www.FreeBSD.org/cgi/man.cgi[*Страницы Справочника*]
+. https://man.freebsd.org/cgi/man.cgi[*Страницы Справочника*]
 +
-На самом деле Проект не придает им большое значение, так как они являются частью операционной системы. Исключением является Японская команда, которая занимается их переводом. Нет причин, по которым другие добровольцы не могли бы начать перевод страниц Справочника на другие языки.
+Страницы справочника являются частью базовой операционной системы. И проект документации, и коммиттеры исходного кода изменяют и следят за актуальность страниц Справочника.
 +
-Нельзя сказать, что страницы Справочника не важны, вовсе нет. Просто они очень сильно связаны со специфическими подсистемами FreeBSD, и в большинстве случаев лучше всех для написания страниц Справочника по некоторой части FreeBSD подходит тот, кто эту часть реализовывал.
-. link:../../docs/books[*Книги*]
+Японская команда перевела многие страницы Справочника на японский язык. Нет причин, по которым другие добровольцы не могли бы начать перевод страниц Справочника на другие языки.
+. link:https://docs.freebsd.org/ru/books/[*Книги*]
 +
 В проекте имеется большое количество документации, достигшей "книжной длины", или стремящейся к ней. Сюда включены FreeBSD FAQ и Руководство FreeBSD.
-. link:../../docs/books#articles[*Статьи*]
+. link:https://docs.freebsd.org/ru/articles[*Статьи*]
 +
 В FreeBSD есть масса информации, доступной в более коротком формате статьи, аналогично учебникам или HOWTO других проектов.
 
-link:..[FreeBSD Documentation Project Home]
+link:../[Проект Документирования FreeBSD]
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (28.01.2023): 430c609ef7a9b6cc33d3475b56d71b2b91815093
+//
+
