accessibility: Fix vidconfig manpage reference
Reviewed by:	ziaee
Closes:		https://github.com/freebsd/freebsd-doc/pull/578

--- a/documentation/content/en/books/accessibility/virtual-terminal/_index.adoc
+++ b/documentation/content/en/books/accessibility/virtual-terminal/_index.adoc
@@ -205,7 +205,7 @@ For example, to set blue text on a green background:
 % vidcontrol blue green
 ....
 
-Configurations made with man:vidcontrol are not persistent across shutdown.
+Configurations made with man:vidcontrol[1] are not persistent across shutdown.
 To make the settings permanent, add the following line to man:rc.conf[5]:
 `allscreens_flags="-c _foreground_ _background_"`.
 
