website: RU - sync ru/commercial pages
Reviewed by: andy, marck, sv_ulstu.ru
Differential Revision: https://reviews.freebsd.org/D54108

--- a/website/content/ru/commercial/_index.adoc
+++ b/website/content/ru/commercial/_index.adoc
@@ -1,15 +1,28 @@
 ---
-title: "Commercial Vendors"
+title: "Коммерческие поставщики"
 sidenav: support
 ---
 
-= Commercial Vendors
+= Коммерческие поставщики
 
-Мощь, гибкость и удобство FreeBSD привлекает широкий круг пользователей и поставщиков. В дополнение к странице link:../gallery/[галереи], где есть многие наши пользователи, ниже располагается список поставщиков, предлагающих коммерческие продукты, сервисы, и/или консультации по FreeBSD.
+Мощь, гибкость и удобство FreeBSD привлекает широкий круг пользователей и поставщиков.
+Ниже располагается список поставщиков, предлагающих коммерческие продукты, сервисы, и/или консультации по FreeBSD.
 
-* link:https://www.FreeBSD.org/commercial/consult_bycat/[Консалтинговые услуги] Вне зависимости от того, являетесь вы начинающим пользователем FreeBSD или вам нужно завершить большой проект, наемный консультант может помочь. Вы можете просмотреть список link:https://www.FreeBSD.org/commercial/consulting/[в алфавитном порядке] или разбитым по link:https://www.FreeBSD.org/commercial/consult_bycat/[категориям].
-* link:https://www.FreeBSD.org/commercial/hardware/[Аппаратное обеспечение] Вам нужно специализированное оборудование, ищете новый настольный компьютер, или хотите поставить в стойку сервера с предустановленной FreeBSD? У этих компаний может быть то, что вам нужно!
-* link:https://www.FreeBSD.org/commercial/misc/[Различные поставщики] Книги и аксессуары, без которых вы просто жить не можете!
-* link:https://www.FreeBSD.org/commercial/software_bycat/[Программное обеспечение] В FreeBSD имеется широкий спектр качественного программного обеспечения, от аудиоплэйеров и драйверов сетевых адаптеров до коммерческих баз данных. Вы можете просмотреть список link:https://www.FreeBSD.org/commercial/software/[в алфавитном порядке] или разбитым по link:https://www.FreeBSD.org/commercial/software_bycat/[категориям].
+* link:consult_bycat[Консалтинговые услуги] Вне зависимости от того, являетесь вы начинающим пользователем FreeBSD или вам нужно завершить большой проект, наёмный консультант может помочь.
+Вы можете просмотреть список link:consult[в алфавитном порядке] или разбитым по link:consult_bycat[категориям].
+* link:hardware[Аппаратное обеспечение] Вам нужно специализированное оборудование, ищете новый настольный компьютер, или хотите поставить в стойку сервера с предустановленной FreeBSD?
+У этих компаний может быть то, что вам нужно!
+* link:isp[Интернет провайдеры] Если вам нужно веб-пространство на системе FreeBSD или вы хотите подключить свою компанию к интернету, эти компании могут предложить вам то, что нужно!
+* link:misc[Различные поставщики] Книги и аксессуары, без которых вы просто жить не можете!
+* link:software_bycat[Программное обеспечение] В FreeBSD имеется широкий спектр качественного программного обеспечения, от аудиоплееров и драйверов сетевых адаптеров до коммерческих баз данных.
+Вы можете просмотреть список link:software[в алфавитном порядке] или разбитым по link:software_bycat[категориям].
 
-Если Ваша компания поддерживает продукт для FreeBSD, сервис, дает консультации, или осуществляет техническую поддержку, информация о которых должна быть внесена на эту страницу, пожалуйста отправьте письмо на www@FreeBSD.org, дайте нам знать об этом! Сообщение должно быть в HTML, параграфом средней длины. Пожалуйста, имейте ввиду, что включение поставщиков в наш список не означает поддержку их продуктов или сервисов проектом FreeBSD.
+Если Ваша компания поддерживает продукт для FreeBSD, сервис, дает консультации, или осуществляет техническую поддержку, информация о которых должна быть внесена на эту страницу, пожалуйста заполните link:../support/bugreports/[форму в сообщениях о проблеме] с категорией Documentation->Website.
+В сообщение должен параграф средней длины, описывающий вашу компанию.
+Пожалуйста, имейте ввиду, что включение поставщиков в наш список не означает поддержку их продуктов или сервисов проектом FreeBSD.
+
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (02.08.2023): ac03e7f788f8b73e36bf1fda4695bf0ab200d79d
+//
