--- a/website/content/en/releng/_index.adoc
+++ b/website/content/en/releng/_index.adoc
@@ -52,7 +52,7 @@ This table lists the code freeze status for major branches of the `src/` reposit
 |Branch |Status |Contact |Notes
 |`main` |Open |committers |Active development branch for 16.0-CURRENT.
 |`stable/15` |Open |committers |Development branch for FreeBSD 15-STABLE.
-|`releng/15.0` |Frozen |re@FreeBSD.org |FreeBSD 15.0 supported errata fix branch.
+|`releng/15.0` |Frozen |security-officer@FreeBSD.org |FreeBSD 15.0 supported errata fix branch.
 |`stable/14` |Open |committers |Development branch for FreeBSD 14-STABLE.
 |`releng/14.3` |Frozen |security-officer@FreeBSD.org |FreeBSD 14.3 supported errata fix branch.
 |`releng/14.2` |Frozen |security-officer@FreeBSD.org |FreeBSD 14.2 errata fix branch (not officially supported).
