Document __FreeBSD_version bumps 1600004 and 1600005.

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -81,6 +81,16 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |October 30, 2025
 |16.0-CURRENT after changing the `bus_alloc_resource` API to accept the `rid` argument by value.
 
+|1600004
+|gitref:b3de3c2dea576b626a8a107d96b0fd6562500c1e[repository="src",length=12]
+|November 2, 2025
+|16.0-CURRENT after adding support for `_PC_CASE_INSENSITIVE` to NFS.
+
+|1600005
+|gitref:575639548cef58590a1d70c29e47aae0e8d44153[repository="src",length=12]
+|December 9, 2025
+|16.0-CURRENT after changing the `BUS_ALLOC_RESOURCE` bus driver method to pass the `rid` argument by value.
+
 |===
 
 [[versions-15]]
