handbook/desktop: Link desktop ports

--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -75,27 +75,27 @@ A desktop environment can range from a simple window manager to a complete suite
 
 | KDE Plasma
 | GPL 2.0 or later
-| x11/kde
+| package:x11/kde[]
 
 | GNOME
 | GPL 2.0 or later
-| x11/gnome
+| package:x11/gnome[]
 
 | XFCE
 | GPL, LGPL, BSD
-| x11-wm/xfce4
+| package:x11-wm/xfce4[]
 
 | MATE
 | GPL 2.0, LGPL 2.0
-| x11/mate
+| package:x11/mate[]
 
 | Cinnamon
 | GPL 2.0 or later
-| x11/cinnamon
+| package:x11/cinnamon[]
 
 | LXQT
 | GPL, LGPL
-| x11-wm/lxqt
+| package:x11-wm/lxqt[]
 
 |===
 
