status: expand HPC modernization WIP (mpifileutils, ReFrame, Spack)

--- a/website/content/en/status/report-2025-10-2025-12/hpc-ports-modernization.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/hpc-ports-modernization.adoc
@@ -22,6 +22,9 @@ During this quarter, a significant amount of work has gone into making FreeBSD a
 
 * Iterating on additional Slurm integration improvements (plugins, defaults, documentation) to make it easier to deploy Slurm on FreeBSD in real clusters.
 * Extending the HPC userland stack with further tools such as test frameworks and job-oriented utilities, so that FreeBSD can serve as a realistic development and validation platform for HPC software.
+* Porting `sysutils/mpifileutils` and its dependencies (`devel/libcircle`, `devel/lwgrp`, `devel/lwgrpd`) to provide MPI-parallel file utilities commonly used on large HPC filesystems (currently under review).
+* Adding and refining HPC-oriented Python tooling, including `benchmarks/py-reframe` (HPC regression testing framework) and continued work around `sysutils/py-clustershell`.
+* Initial work on bringing `devel/spack` to FreeBSD as a complementary tool for HPC software development and experimentation, with the goal of improving compatibility with existing HPC workflows.
 
 ==== Future plans
 
