[phb][Uses]: Update Uses=go
After
https://cgit.freebsd.org/ports/commit/?id=b318a7cadc57d35a4dfdc1db90048b5e7b194501

--- a/documentation/content/en/books/porters-handbook/uses/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/uses/_index.adoc
@@ -1048,10 +1048,12 @@ See crossref:special[using-gnome,Using GNOME] for more information.
 Ports should not be created for Go libs, see crossref:special[go-libs,Go Libraries] for more information.
 ====
 
-Possible arguments: (none), `N.NN`, `N.NN-devel`, `modules`, `no_targets`, `run`
+Possible arguments: (none), `N.NN`, `N.NN+`, `N.NN-devel`, `modules`, `no_targets`, `run`
 
 Sets default values and targets used to build Go software.
 A build dependency on the Go compiler port is added, port maintainers can set version required.
+If the `X.Y+` format is used then Go `X.Y` will be used unless the default go
+version is higher than `X.Y` in which case the default version will be used.
 By default the build is performed in GOPATH mode.
 If Go software uses modules, the modules-aware mode can be switched on with `modules` argument.
 `no_targets` will setup build environment like `GO_ENV`, `GO_BUILDFLAGS` but skip creating extract and build targets.
