new committer (src): Johan Söllvander (js)
Complete steps 1-4 for new committers from the committer's
guide:

 1. Add myself to doc/shared/authors.adoc
 2. Add myself to doc/shared/contrib-committers.adoc
 3. Add a news entry
 4. Add my PGP key

Reviewed By:    asomers (mentor)
Approved by:    asomers (mentor)
Differential Revision: https://reviews.freebsd.org/D54256

--- a/shared/authors.adoc
+++ b/shared/authors.adoc
@@ -1763,6 +1763,10 @@
 :jrtc27-email: jrtc27@FreeBSD.org
 :jrtc27: {jrtc27-name} <{jrtc27-email}>
 
+:js-name: Johan Söllvander
+:js-email: js@FreeBSD.org
+:js: {js-name} <{js-email}>
+
 :jsa-name: Joseph S. Atkinson
 :jsa-email: jsa@FreeBSD.org
 :jsa: {jsa-name} <{jsa-email}>
