--- a/website/content/en/status/report-2025-10-2025-12/openvox.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/openvox.adoc
@@ -12,7 +12,7 @@ An optional database (OpenVoxDB) can be setup for reporting and describing advan
 
 A lot of things happened in the Puppet world this year.
 After Perforce link:https://www.puppet.com/blog/open-source-puppet-updates-2025[announced major changes regarding how they contribute to Open-Source], they discontinued the Open Source version of Puppet (also known as OSS Puppet), advising users to switch to Puppet Enterprise (closed source flavor of Puppet that has existed for years) or Puppet Core (a new closed source flavor of Puppet, not developed in the open, and link:https://voxpupuli.org/blog/2025/05/19/perforce-eula/[accessible only after signing an End-User License Agreement (EULA)]).
-The Vox Pupuli community tried to reason Perforce, but without success.
+The Vox Pupuli community tried to reason with Perforce, but without success.
 Vox Pupuli therefore took maintainership of the Apache-2.0 licensed Puppet code, and continue to maintain it, update it, provide packages, in place of its failing editor.
 The name "Puppet" being owned by Perforce, the project has been renamed to "OpenVox" in order for users to not confuse the old unmaintained Open-Source Puppet with the new version maintained by OpenVoxProject, which is part of Vox Pupuli.
 
@@ -27,6 +27,7 @@ To follow these changes, a bunch of ports have been added to the FreeBSD ports t
 
 They are drop-in replacement of the former ports: while the packages are named "openvox", the service keep their legacy name for now.
 Switching to them is as easy as installing them, and answering yes when pkg propose to remove the legacy packages and install the new ones.
+No other action is required: the module you used with Puppet are expected to continue working with OpenVox.
 
 During this year, Puppet 7 has also reached End-of-Life, so the corresponding ports have been deleted from the FreeBSD ports tree.
 Puppet 7 was the last version that allowed to choose between the C and the Ruby version of facter, the port for the C version (sysutils/facter) has therefore also been removed.
